spike-iter-3/compile-fail/tests/ui/pattern2_service_reject.stderr
warning: unused import: `credential_proto::CredentialRef`
  --> tests/ui/pattern2_service_reject.rs:11:5
   |
11 | use credential_proto::CredentialRef;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `ApiKeyCredential: BitbucketBearerPhantom` is not satisfied
  --> tests/ui/pattern2_service_reject.rs:22:17
   |
22 |     accept_bb::<ApiKeyCredential>();
   |                 ^^^^^^^^^^^^^^^^ the trait `BitbucketCredential` is not implemented for `ApiKeyCredential`
   |
help: the trait `BitbucketCredential` is implemented for `OAuth2Credential`
  --> $WORKSPACE/credential-proto-builtin/src/lib.rs
   |
   | impl BitbucketCredential for OAuth2Credential {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `ApiKeyCredential` to implement `BitbucketBearer`
   = note: required for `ApiKeyCredential` to implement `BitbucketBearerPhantom`
note: required by a bound in `accept_bb`
  --> tests/ui/pattern2_service_reject.rs:14:26
   |
14 | fn accept_bb<T: ?Sized + BitbucketBearerPhantom>() {}
   |                          ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `accept_bb`
